--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     </section>
     <div class="seperation">
     </div>
-    <section class="second">
-        <div class="image">
+    <section class="second ">
+        <div class="image sec-order">
             <img src="assets/images/mobile-0819.jpg" alt="">
 
         </div>
-        <div class="text">
+        <div class="text first-order">
             <span>Download your shows to watch offline</span>
             <p> Save your favorites easily and always have something to watch.</p>
         </div>
@@ -77,11 +77,12 @@
     <div class="seperation">
     </div>
     <section class="fourth">
-        <div class="image">
+        <div class="image"></div>
+            <div class="image sec-order">
             <img src="assets/images/cartoon.png" alt="">
 
         </div>
-        <div class="text">
+        <div class="text first-order">
             <span>Create profiles for kids</span>
             <p> Send kids on adventures with their favorite characters in a space made just for them—free with your
                 membership.</p>
